--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "AI Daleel Travel Assistant with MCP",
   "main": "gateway/index.js",
   "scripts": {
-    "start": "node gateway/index.js"
+    "start": "node gateway/index.js",
+    "start:live-events": "node live-events-server.js",
+    "start:travel-planner": "node mapbox-travel-planner.js"
   },
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.15.3",
+    "@openbnb/mcp-server-airbnb": "^0.1.0",
     "@supabase/supabase-js": "^2.49.1",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
@@ -22,8 +25,6 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0",
-    "ws": "^8.18.1",
-    "axios": "^1.8.4"
-
+    "ws": "^8.18.1"
   }
 }
