--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.15.3",
-    "@openbnb/mcp-server-airbnb": "^0.1.0",
     "@supabase/supabase-js": "^2.49.1",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
@@ -26,5 +25,8 @@
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0",
     "ws": "^8.18.1"
+  },
+  "devDependencies": {
+    "@openbnb/mcp-server-airbnb": "^0.1.0"
   }
 }
