--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.15.3",
+    "@openbnb/mcp-server-airbnb": "^0.1.0",
     "@supabase/supabase-js": "^2.49.1",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
@@ -23,10 +24,8 @@
     "rate-limit-redis": "^4.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0",
-    "ws": "^8.18.1",
-    "@openbnb/mcp-server-airbnb": "^0.1.0"
-  },
-  "devDependencies": {
+    "ws": "^8.18.1"
   }
 }
