--- a/package.json
+++ b/package.json
@@ -5,9 +5,17 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "start:live-events": "node live-events-server.js",
+    "dev": "npx concurrently --kill-others-on-fail \"npm run dev:main\" \"npm run dev:openai\" \"npm run dev:brave\" \"npm run dev:culture\" \"npm run dev:visa\" \"npm run dev:events\" \"npm run dev:travel\"",
+    "dev:main": "nodemon server.js",
+    "dev:openai": "nodemon openai-server.js",
+    "dev:brave": "nodemon brave-llm-server.js",
+    "dev:culture": "nodemon culture-insights-server.js",
+    "dev:visa": "nodemon visa-requirements-server.js",
+    "dev:events": "nodemon live-events-server.js",
+    "dev:travel": "nodemon mapbox-travel-planner.js",
     "build": "tsc",
-    "start:travel-planner": "node mapbox-travel-planner.js"
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.15.3",
@@ -15,18 +23,18 @@
     "@supabase/supabase-js": "^2.49.1",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.2",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
     "joi": "^17.13.3",
     "js-yaml": "^4.1.0",
     "mapbox-gl": "^3.1.2",
-    "openai": "^4.89.0",
+    "openai": "^4.0.0",
     "rate-limit-redis": "^4.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
-    "winston": "^3.17.0",
+    "winston": "^3.8.2",
     "ws": "^8.18.1"
   },
   "devDependencies": {
@@ -34,6 +42,11 @@
     "@types/joi": "^17.2.2",
     "@types/node": "^22.15.3",
     "@types/uuid": "^10.0.0",
+    "concurrently": "^9.1.2",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.38.0",
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
     "typescript": "^5.8.3"
   }
 }
