--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mapbox/mapbox-sdk": "^0.15.3",
     "@openbnb/mcp-server-airbnb": "^0.1.0",
     "@supabase/supabase-js": "^2.49.1",
+    "ajv": "^8.17.1",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
